--- a/socket-client.html
+++ b/socket-client.html
@@ -16,70 +16,71 @@
 		var socket = new io.Socket('zkleinpeter-ubuntu',{
 			port: 9090
 		});
-		socket.connect(); 
-		
+		socket.connect();
+
 		// Add a connect listener
 		socket.on('connect',function() {
 			log('<span style="color:green;">Client has connected to the server!</span>');
 		});
 		// Add a connect listener
     socket.on('message',function(data) {
-      console.log(data);
-      console.log('buffer' in data);
       if( 'buffer' in data ){
-        console.log( data.buffer )
         for( var i in data.buffer ) {
           if ('announcement' in data.buffer[i]) {
             log('<em>' + data.buffer[i].announcement + '</em>');
+          } else if ('message' in data.buffer[i]) {
+            log(data.buffer[i].message[0] + ' ' + data.buffer[i].message[1]);
           } else log(data.buffer[i]);
         }
       } else if ('announcement' in data) {
         log('<em>' + data.announcement + '</em>');
+      } else if ('message' in data) {
+        log(data.message[0] + ' ' + data.message[1]);
       } else log(data);
 		});
 		// Add a disconnect listener
 		socket.on('disconnect',function() {
 			log('<span style="color:red;">The client has disconnected!</span>');
 		});
-		
+
 		// Sends a message to the server via sockets
 		function sendMessageToServer(message) {
-			socket.send(message);
-			log('<span style="color:#888">Sending "' + message + '" to the server!</span>');
+      socket.send(message);
+			log('i said: ' + message);
 		}
-		
+
 		// Outputs to console and list
 		function log(message) {
 			var li = document.createElement('li');
 			li.innerHTML = message;
 			document.getElementById('message-list').appendChild(li);
 		}
-		
+
 		/*
 		// Create a socket instance
 		socket = new WebSocket('ws://localhost:9090');
-		
+
 		// Open the socket
 		socket.onopen = function(event) {
 			console.log('Socket opened on client side',event);
-			
+
 			// Listen for messages
 			socket.onmessage = function(event) {
 				console.log('Client received a message',event);
 			};
-			
+
 			// Listen for socket closes
 			socket.onclose = function(event) {
 				console.log('Client notified socket has closed',event);
 			};
-			
+
 		};
 		*/
-		
+
 	</script>
 </head>
 <body>
-	
+
 	<p>Messages will appear below (and in the console).</p><br />
 	<ul id="message-list"></ul>
 	<ul style="margin:20px 0 0 20px;">
@@ -87,17 +88,49 @@
 		<li>Type <code>socket.connect()</code> to reconnect</li>
 		<li>Type <code>sendMessageToServer('Your Message')</code> to send a message to the server</li>
 	</ul>
-  
-  <form action='/report' method='POST' >
-    <label for=url>Enter URL for Report</label>
-    <input type='url' name='url' />
-    <input type='submit', value='Submit' />
+
+  <form id='chat'>
+    <textarea id='talking' rows="5" col='20'></textarea>
+    <input type=submit value='chat'/>
+  </form>
+
+  <form id='report' action='/report' method='POST' >
+    <ul style="list-style-type:none;">
+      <li>
+        <p><label for=url>Enter URL for Report</label></p>
+        <p><input type='url' name='url' /></p>
+      </li>
+      <li>
+        <p><label for=user-style-sheet>Custom Style Sheet for Report</label></p>
+        <p><input type='user-style-sheet' name='user-style-sheet' /></p>
+      </li>
+      <li>
+        <p><label for=title>Title</label></p>
+        <p><input type='title' name='title' /></p> </li>
+      <li>
+        <p><label for=page-size>Page Size</label></p>
+        <p><input type='page-size' name='page-size' /></p>
+      </li>
+      <li>
+        <input type='radio' name='orientation' value='Portrait' checked=checked/>
+        <label for=orientation>Portrait</label>
+        <input type='radio' name='orientation' value='Landscape' />
+        <label for=orientation>Landscape</label>
+      </li>
+      <li><input type='submit', value='Submit' /></li>
+    </ul>
   </form>
 
   <script>
     $(document).ready(function(){
-      $('form').submit(function(){
-        $.post('/report', $('form').serializeArray() );
+      //$('form#report').submit(function(){
+      //  $.post('/report', $('form').serializeArray() );
+      //  return false;
+      //});
+
+      $('form#chat').submit(function(){
+        sendMessageToServer($('#talking').val());
+        $('#talking').val('');
         return false;
       });
     });
